# 5f

./: .gitignore  Makefile
apigw/: .gitignore  pom.xml  serverless.yml
apigw/src/resources/: application.properties
apigwt/: ApiHandler.ts  SocketHandler.ts  package.json  serverless.yml
apigwt/domain/: Finger.test.ts
apigwt/domain/adapters/: RoomAdapter.ts
apigwt/domain/entities/: Finger.ts  Room.ts
apigwt/domain/ports/: RoomInputPort.test.ts  RoomInputPort.ts  RoomOutputPort.test.ts  RoomOutputPort.ts
apigwt/domain/values/: FingerType.test.ts  FingerType.ts  RoomId.test.ts  RoomId.ts  SessionId.test.ts  SessionId.ts
apigwt/rust-lambda/: Cargo.toml
apigwt/rust-lambda/src/get_room/: main.rs
apigwt/util/: lastUpdated.ts
docs/: asset-manifest.json  index.html  precache-manifest.14f149f8521c9a3b4f1ed6f54ce38e98.js  precache-manifest.3787fec86ebd7f67bc29d9bd2fa96483.js  precache-manifest.7a96033dea50dad1f0bf24b9ba8e7f40.js  precache-manifest.cd214c27b86337cd07676b0f074cd1a3.js
docs/static/js/: 2.37f7fe27.chunk.js  2.37f7fe27.chunk.js.map  main.96605e7d.chunk.js  main.96605e7d.chunk.js.map  main.9c67282d.chunk.js  main.9c67282d.chunk.js.map  main.b8e85042.chunk.js  main.b8e85042.chunk.js.map  runtime-main.d2d31545.js  runtime-main.d2d31545.js.map
fivefingers-backend/: pom.xml
front-app/: .env  .env.test  package.json
front-app/public/: index.html
front-app/src/: App.test.tsx  App.tsx  setupProxy.js
front-app/src/__snapshots__/: App.test.tsx.snap
front-app/src/component/: AppTitle.tsx  (+17 more)
old/apigw/: .gitignore
old/local/: README.md  pom.xml
(+36 files in other folders)
