[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[[bin]]
name = "get_room"
path = "src/get_room/main.rs"

[[bin]]
name = "new_room"
path = "src/new_room/main.rs"

[dependencies]
aws_lambda_events = { version = "0.12.1", default-features = false, features = ["apigw"] }
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
http = "0.2"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-dynamodb = "1.3.0"
aws-config = "1.0.1"

